--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -889,6 +889,7 @@ en:
       metadata_templates: Metadata Templates
       samples: Samples
       settings: Settings
+      workflow_executions: Workflow Executions
     subgroups:
       index:
         pagy:
