feat: Internationalize attachment preview page
- Add localization keys for copy, copied, and download actions
- Replace hardcoded text with translation method calls
- Update both English and French locale files
- Improve code readability and maintainability

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1889,6 +1889,11 @@ en:
     attachment:
       download: Download
       preview: Preview
+    attachments:
+      index:
+        copied: Copied
+        copy: Copy
+        download: Download
     edit_dialog:
       cancel_button: Cancel
       description: You are editing workflow execution '%{workflow_execution_id}'
