feat: Internationalize attachment preview page content
- Add localization keys for file preview unavailability
- Update view to use translation method for preview messages
- Adjust icon size for better visual presentation
- Update both English and French locale files

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1894,6 +1894,9 @@ en:
         copied: Copied
         copy: Copy
         download: Download
+        not_available:
+          details: Please download to view the contents
+          title: Preview not available for this file type
     edit_dialog:
       cancel_button: Cancel
       description: You are editing workflow execution '%{workflow_execution_id}'
