--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1894,6 +1894,9 @@ fr:
         copied: Copié
         copy: Copier
         download: Télécharger
+        not_available:
+          details: Please download to view the contents
+          title: Preview not available for this file type
     edit_dialog:
       cancel_button: Cancel
       description: You are editing workflow execution '%{workflow_execution_id}'
