starting to add new metadata columns input to import dialog

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1819,13 +1819,15 @@ fr:
             file_help: CSV, TSV, XLS or XLSX.
             ignore_empty_values:
               description: If selected, any metadata fields without an associated value will be ignored and those metadata keys will not be removed from the sample if present. However, if this not selected, any samples with the metadata key and empty value will be deleted.
+            metadata_columns: Metadata Columns
             namespace:
-              description: 'The spreadsheet is required to have a column that contains a sample identifier. '
+              description: The spreadsheet is required to have a column that contains a sample identifier.
               group:
                 description_html: The identifier is case-sensitive and must contain the <b>sample ID</b>.
               project:
                 description_html: The identifier is case-sensitive and can contain either the <b>sample name or ID</b>.
             sample_id_column: Sample ID Column
+            select_metadata_columns: Select Metadata Columns
             select_sample_id_column: Select a Sample ID Column
             spinner_message: Importing sample metadata, this might take a while...
             submit_button: Import Metadata
