feat: Add localization for workflow execution creation error message
- Update English and French locale files with error message for workflow execution creation
- Provide clear, localized error messaging for workflow execution creation failures

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1897,6 +1897,8 @@ en:
         not_available:
           details: Please download to view the contents
           title: Preview not available for this file type
+    create:
+      error_message: 'The following errors prevented the Workflow Execution from being created:'
     edit_dialog:
       cancel_button: Cancel
       description: You are editing workflow execution '%{workflow_execution_id}'
