refactor: Improve attachment handling with user-friendly redirection and add missing locale entry

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1889,6 +1889,7 @@ fr:
       download: Download
       preview: Preview
     attachments:
+      file_not_found: File not found
       index:
         copied: Copié
         copy: Copier
