--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1889,6 +1889,7 @@ en:
       download: Download
       preview: Preview
     attachments:
+      file_not_found: File not found
       index:
         copied: Copied
         copy: Copy
